<resources>
    <string name="app_name">FaceRec</string>
    <string name="cameraButton">Camera</string>
    <string name="enterUserInfoTextView">Enter your information:</string>
    <string name="orEnterId">Or enter your ID:</string>
    <string name="hintUserName">User Name…</string>
    <string name="hintUserSurname">User Surname…</string>
    <string name="hintUserId">User ID…</string>
    <string name="confirmFaceLabel">Confirm Face</string>
    <string name="button_capture">Capture</string>
    <string name="cameraActivity">Camera</string>
    <string name="identifyButton">Identify</string>
    <string name="preference_file_key">com.apps.ktr.facerec.USER_IDS</string>
    <string name="eigenFaceSearch">Search With Eigenface</string>
    <string name="fisherFaceSearch">Search With Fisherface</string>
    <string name="LBPHFaceSearch">Search with LBPH</string>
    <string name="dropDb">Drop DB</string>
    <string name="createCsvButton">Reload Training File</string>
    <string name="trainButton">Train Algorithms</string>
    <string name="dialogUserId">Your ID is:</string>
    <string name="dialogUserIdTitle">Information</string>
    <string name="ok">OK</string>
    <string name="eigenfacetime">Time it took for eigenfaces to train:</string>
    <string name="fisherfacetime">Time it took for fisherfaces to train:</string>
    <string name="lbphtime">Time it took for LBPH to train:</string>
    <string name="noIdFoundTitle">Error</string>
    <string name="noIdFound">Your ID was not found in the database, please check if it\'s correct.\nIf you don\'t have an ID please fill in your information and submit the form.</string>
    <string name="faceNotFound">Face not found. Please try again.</string>
    <string name="faceNotFoundTitle">Error</string>
    <string name="saveTrainedFile">Save</string>
    <string name="alertSaveFile">You are about to save a large file.\nThis will take some time and will reserve a large amount of storage.\nDo you want to continue?</string>
    <string name="alertSaveFileTitle">Alert</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="traineFileFoundTitle">Information</string>
    <string name="traineFileFound">Found trained data.\nTrained data will make the process faster only if there is a large collection of images, otherwise loading those large files will slow the whole process down.\nShould the app use the data?</string>
    <string name="userName">Recognized Name:</string>
    <string name="userSurname">Recognized Surname:</string>
    <string name="recogntionConfirmation">Is the prediction acurate?</string>
    <string name="notRecognized">Your face could not be recognized</string>
    <string name="notRecognizedTitle">Error</string>
    <string name="testFaceDescription">Face tested.</string>
    <string name="reconstructedFaceDescription">Face reconstructed and used by the algorithm.</string>
    <string name="testFaceNote">Original</string>
    <string name="reconstructedFaceNote">Reconstructed</string>
    <string name="componentsUsed">Number of Components Used:</string>
    <string name="title_activity_select_user">SelectUserActivity</string>
    <string name="selectUserTitle">Who are you?</string>
    <string name="id">ID</string>
    <string name="name">Name</string>
    <string name="surname">Surname</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="statisticsButton">Statistics</string>
    <string name="timePageTitle">Training Time - Number of Images</string>
    <string name="successPercentagePageTitle">Success Rate - Percentage of User Images</string>
    <string name="successNumberPageTitle">Success Rate - Number of User Images</string>
    <string name="timePredictPageTitle">Predict Time Graph</string>
    <string name="trainTime">Train Time:</string>
    <string name="predictTime">Predict Time:</string>
</resources>
