<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/rootRecognitionResultLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.apps.ktr.facerec.RecognitionResultActivity">


    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/relativeLayout">

        <ImageView
            android:id="@+id/testFace"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:contentDescription="@string/testFaceDescription" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="false"
            android:layout_below="@id/testFace"
            android:layout_centerInParent="true"
            android:text="@string/testFaceNote"/>

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_toEndOf="@+id/relativeLayout"
        android:layout_marginRight="@dimen/activity_horizontal_margin"
        android:id="@+id/relativeLayout2">

        <ImageView
            android:id="@+id/reconstructedFace"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:contentDescription="@string/reconstructedFaceDescription" />

        <TextView
            android:id="@+id/removable"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="false"
            android:layout_below="@id/reconstructedFace"
            android:layout_centerInParent="true"
            android:text="@string/reconstructedFaceNote"/>

    </RelativeLayout>

    <TextView
        android:id="@+id/resultName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/userName"
        android:layout_alignTop="@+id/relativeLayout2"
        android:layout_toEndOf="@+id/relativeLayout2" />

    <TextView
        android:id="@+id/resultSurname"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/userSurname"
        android:layout_below="@+id/resultName"
        android:layout_toRightOf="@+id/relativeLayout2" />

    <TextView
        android:id="@+id/componentsUsed"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/componentsUsed"
        android:layout_below="@+id/resultSurname"
        android:layout_toRightOf="@+id/relativeLayout2" />



    <RelativeLayout
        android:id="@+id/relativeLayout3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="end"
        android:layout_toEndOf="@+id/relativeLayout2"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true">

        <TextView
            android:id="@+id/recogntionConfirmation"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:text="@string/recogntionConfirmation" />

        <Button
            android:id="@+id/declineRecognitionButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_below="@id/recogntionConfirmation"
            android:text="@string/no" />

        <Button
            android:id="@+id/confirmRecognitionButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/recogntionConfirmation"
            android:layout_toStartOf="@id/declineRecognitionButton"
            android:text="@string/yes" />
    </RelativeLayout>


</RelativeLayout>
