<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mainRl"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.apps.ktr.facerec.MainActivity">

    <Button
        android:id="@+id/cameraButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="30dp"
        android:layout_marginStart="30dp"
        android:text="@string/cameraButton" />

    <Button
        android:id="@+id/identifyButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/cameraButton"
        android:layout_marginEnd="30dp"
        android:layout_marginStart="30dp"
        android:text="@string/identifyButton" />

    <Button
        android:id="@+id/createCsvButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/identifyButton"
        android:layout_marginEnd="30dp"
        android:layout_marginStart="30dp"
        android:text="@string/createCsvButton" />

    <!--<Button
        android:id="@+id/trainButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/createCsvButton"
        android:layout_marginEnd="30dp"
        android:layout_marginStart="30dp"
        android:text="@string/trainButton-->" />

    <Button
        android:id="@+id/dropDbButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/createCsvButton"
        android:layout_marginEnd="30dp"
        android:layout_marginStart="30dp"
        android:text="@string/dropDb" />

    <Button
        android:id="@+id/statisticsButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/dropDbButton"
        android:layout_marginEnd="30dp"
        android:layout_marginStart="30dp"
        android:text="@string/statisticsButton" />


</RelativeLayout>
