<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.apps.ktr.facerec.TrainAlgorithmsActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/eigenfacetime"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/eigenfacetime" />

        <TextView
            android:id="@+id/fisherfacetime"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/eigenfacetime"
            android:text="@string/fisherfacetime"/>

        <TextView
            android:id="@+id/lbphtime"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/fisherfacetime"
            android:text="@string/lbphtime"/>

        <Button
            android:id="@+id/okTrainAlgorithmsButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/lbphtime"
            android:layout_alignParentEnd="true"
            android:text="@android:string/ok"/>

        <Button
            android:id="@+id/saveTrainedFile"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/lbphtime"
            android:layout_toStartOf="@id/okTrainAlgorithmsButton"
            android:text="@string/saveTrainedFile"/>

    </RelativeLayout>
</LinearLayout>
