<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.apps.ktr.facerec.IdentifyFaceActivity">

    <ImageView
        android:id="@+id/faceToDetect"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:layout_marginStart="50dp"
        android:layout_marginEnd="50dp"/>

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <Button
            android:id="@+id/eigenFaceSearch"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginStart="40dp"
            android:layout_marginEnd="40dp"
            android:text="@string/eigenFaceSearch"/>

        <Button
            android:id="@+id/fisherFaceSearch"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/eigenFaceSearch"
            android:layout_centerHorizontal="true"
            android:layout_marginStart="40dp"
            android:layout_marginEnd="40dp"
            android:text="@string/fisherFaceSearch"/>

        <Button
            android:id="@+id/LBPHFaceSearch"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/fisherFaceSearch"
            android:layout_centerHorizontal="true"
            android:layout_marginStart="40dp"
            android:layout_marginEnd="40dp"
            android:text="@string/LBPHFaceSearch"/>

    </RelativeLayout>

</LinearLayout>
